--- a/src/App.css
+++ b/src/App.css
@@ -11,18 +11,34 @@ body {
 }
 
 .products {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+
   text-align: center;
   padding-top: 30px;
 }
 
 .product {
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  border: 2px solid black;
   border-radius: 10px;
-  margin-left: 2px;
+  margin-left: 50px;
   margin-right: 2px;
+  margin-bottom: 10px;
+  padding: 5px;
 }
-.product:hover {
-  transform: scale(1.1);
-  /* filter: blur(3px); */
-}
+
+/* .product .bike {
+} */
+/* .product .description {
+  text-align: center;
+} */
+
+/* .product:hover {
+  transform: scale(1.1); */
+/* } */
+/* filter: blur(3px); */
