--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ body {
   overflow: hidden;
 }
 
+.Btns {
+  display: flex;
+  justify-content: space-around;
+}
+
 .infoBtn {
   background-color: transparent;
   border: 2px solid rgb(19, 19, 19);
@@ -43,6 +48,23 @@ body {
   border-radius: 15px;
 }
 .infoBtn:hover {
+  background-color: rgb(19, 19, 19);
+  color: white;
+  cursor: pointer;
+}
+
+.addToCartBtn {
+  background-color: transparent;
+  border: 2px solid rgb(19, 19, 19);
+  min-width: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 15px;
+}
+
+.addToCartBtn:hover {
   background-color: rgb(19, 19, 19);
   color: white;
   cursor: pointer;
