--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,24 @@ body {
   justify-content: space-around;
   width: auto;
   background-color: rgb(170, 171, 175);
+  margin-bottom: 30px;
+}
+
+.Search {
+  margin: auto;
+  width: 50%;
+}
+.Search .SearchInput {
+  display: block;
+  margin: 0 auto;
+  background-color: transparent;
+  border: 2px solid rgb(19, 19, 19);
+  min-width: 280px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 15px;
 }
 
 .products {
@@ -25,9 +43,10 @@ body {
   flex-wrap: wrap;
   border: 2px solid black;
   border-radius: 10px;
-  margin-left: 50px;
+  margin: 20px 25px auto;
+  /* margin-left: 5px;
   margin-right: 2px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; */
   padding: 5px;
   overflow: hidden;
 }
