--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(255, 253, 253);
-
+  backdrop-filter: blur(0.15px);
+  background: rgba(255, 255, 255, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
