--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,11 @@ body {
   align-items: center;
   justify-content: space-between;
   width: auto;
-  background-color: rgb(170, 171, 175);
   margin-bottom: 30px;
+  background-color: rgb(208, 211, 25);
+  -webkit-box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  -moz-box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
 }
 
 .navBar .image {
@@ -54,30 +57,51 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 2px solid black;
-  border-radius: 10px;
   margin: 20px 25px auto;
-  /* margin-left: 5px;
-  margin-right: 2px;
-  margin-bottom: 10px; */
   padding: 5px;
   overflow: hidden;
+  background-color: rgb(208, 211, 25);
+  color: rgb(0, 0, 0);
+  -webkit-box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  -moz-box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
+}
+
+.bike {
+  padding: 20px;
+}
+
+.bike .image {
+  -webkit-box-shadow: 0px 0px 9px 1px rgba(150, 145, 145, 1);
+  -moz-box-shadow: 0px 0px 9px 1px rgba(150, 145, 145, 1);
+  box-shadow: 0px 0px 9px 1px rgba(150, 145, 145, 1);
+}
+
+.bikeName {
+  font-size: 28px;
+}
+.bikePrice {
+  font-size: 30px;
 }
 
 .Btns {
   display: flex;
   justify-content: space-around;
+  color: rgb(0, 0, 0);
 }
 
 .infoBtn {
-  background-color: transparent;
-  border: 2px solid rgb(19, 19, 19);
+  background-color: white;
   min-width: 100px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin: 18px;
+  color: rgb(0, 0, 0);
+  -webkit-box-shadow: 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  -moz-box-shadow: 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  box-shadow: 0px 0px 9px 2px rgba(150, 145, 145, 1);
 }
 .infoBtn:hover {
   background-color: rgb(19, 19, 19);
@@ -86,14 +110,17 @@ body {
 }
 
 .addToCartBtn {
-  background-color: transparent;
-  border: 2px solid rgb(19, 19, 19);
+  background-color: white;
   min-width: 100px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin: 18px;
+  color: rgb(0, 0, 0);
+  -webkit-box-shadow: 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  -moz-box-shadow: 0px 0px 9px 2px rgba(150, 145, 145, 1);
+  box-shadow: 0px 0px 9px 2px rgba(150, 145, 145, 1);
 }
 
 .addToCartBtn:hover {
@@ -104,7 +131,7 @@ body {
 
 .product .bike .image:hover {
   display: block;
-  transform: scale(1.1);
+  transform: scale(1.02);
   transition: ease-in 0.25s;
 }
 
