--- a/src/components/SingleProduct/SingleProduct.css
+++ b/src/components/SingleProduct/SingleProduct.css
@@ -3,26 +3,30 @@
   box-sizing: border-box;
 }
 
-.cardSingle {
-  width: auto;
+.allCard {
   position: absolute;
+  top: 15%;
+  left: 20%;
+}
+
+.cardSingle {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
   background: white;
-  margin: 0 auto;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.3s;
 }
 nav {
-  width: 100%;
+  width: 80%;
+  background-color: white;
   color: #727272;
   text-transform: uppercase;
   padding: 20px;
   border-bottom: 2px solid #efefef;
   font-size: 17px;
   margin-top: 8px;
-  margin-bottom: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .arrowSingle {
   float: left;
@@ -32,14 +36,24 @@ nav {
 }
 
 .bikePhotoSingle {
-  padding: 30px;
-  width: 45%;
-  text-align: center;
   float: left;
 }
 
 .bikePhotoSingle .imageSingle {
   max-height: 400px;
+  width: auto;
+}
+
+@media (max-width: 640px) {
+  .bikePhotoSingle .imageSingle {
+    max-height: 300px;
+    transition: all 0.3s ease;
+  }
+}
+@media (max-width: 400px) {
+  .bikePhotoSingle .imageSingle {
+    max-height: 200px;
+  }
 }
 
 .descriptionSingle {
@@ -49,7 +63,6 @@ nav {
   border-left: 2px solid #efefef;
 }
 .priceSingle {
-  font-family: "Courier New", monospace;
   font-size: 40px;
 }
 .descriptionHeader {
