--- a/src/App.css
+++ b/src/App.css
@@ -389,3 +389,105 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,500,700);
+* {
+  box-sizing: border-box;
+}
+
+.allCard {
+  position: absolute;
+  top: 15%;
+  left: 20%;
+}
+
+.cardSingle {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  background: white;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  transition: all 0.3s;
+}
+nav {
+  width: 80%;
+  background-color: white;
+  color: #727272;
+  text-transform: uppercase;
+  padding: 20px;
+  border-bottom: 2px solid #efefef;
+  font-size: 17px;
+  margin-top: 8px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.arrowSingle {
+  float: left;
+  height: 15px;
+  width: 15px;
+  margin-right: 10px;
+}
+
+.bikePhotoSingle {
+  float: left;
+}
+
+.bikePhotoSingle .imageSingle {
+  max-height: 400px;
+  width: auto;
+}
+
+@media (max-width: 640px) {
+  .allCard {
+    top: 20%;
+  }
+
+  .bikePhotoSingle {
+    text-align: center;
+  }
+  .bikePhotoSingle .imageSingle {
+    max-height: 300px;
+    transition: all 0.3s ease;
+  }
+}
+@media (max-width: 500px) {
+  .bikePhotoSingle .imageSingle {
+    max-height: 200px;
+    float: right;
+  }
+}
+
+.descriptionSingle {
+  padding: 30px;
+  float: right;
+  width: 55%;
+  border-left: 2px solid #efefef;
+}
+.priceSingle {
+  font-size: 40px;
+}
+.descriptionHeader {
+  font-size: 25px;
+  font-weight: 500;
+  color: #727272;
+}
+.addToCartBtnSingle {
+  outline: 0;
+  border: 0;
+  background: none;
+  border: 1px solid #d9d9d9;
+  padding: 8px 0px;
+  margin-bottom: 20px;
+  color: #302f2f;
+  text-transform: uppercase;
+  width: 125px;
+  font-family: inherit;
+  margin-right: 5px;
+  margin-top: 20px;
+  transition: all 0.3s ease;
+  font-weight: 500;
+}
+.addToCartBtnSingle:hover {
+  border: 1px solid #c9940d;
+  color: #c9940d;
+  cursor: pointer;
+}
