--- a/src/App.css
+++ b/src/App.css
@@ -39,12 +39,44 @@ body {
   display: flex;
   margin: 0 auto;
   background-color: white;
-  border: 2px solid rgb(19, 19, 19);
+  border: 1px solid #d9d9d9;
   min-width: 280px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+.Search .SearchInput:focus {
+  outline: none !important;
+  border: 1px solid #c9940d;
+}
+
+.Category {
+  display: flex;
+  justify-content: center;
+}
+
+.Category .categoryBtns {
+  padding: 20px;
+  outline: 0;
+  border: 0;
+  background: white;
+  border: 1px solid #d9d9d9;
+  padding: 8px 0px;
+  color: #302f2f;
+  text-transform: uppercase;
+  width: 170px;
+  font-family: inherit;
+  margin-right: 15px;
+  margin-top: 20px;
+  transition: all 0.3s ease;
+  font-weight: 500;
+}
+
+.Category .categoryBtns:hover {
+  border: 1px solid #c9940d;
+  color: #c9940d;
+  cursor: pointer;
 }
 
 .products {
