--- a/src/App.css
+++ b/src/App.css
@@ -480,7 +480,7 @@ body {
 .allCard {
   position: absolute;
   top: 15%;
-  left: 20%;
+  left: 15%;
 }
 
 .cardSingle {
@@ -491,6 +491,12 @@ body {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.3s;
 }
+
+.cardSignleImages {
+  display: flex;
+  flex-direction: column;
+}
+
 nav {
   width: 80%;
   background-color: white;
@@ -518,6 +524,27 @@ nav {
   width: auto;
 }
 
+.otherImages {
+  display: flex;
+  border-top: 2px solid #efefef;
+}
+
+.otherImagesSingle:hover {
+  cursor: pointer;
+}
+
+.imageSingle {
+  display: flex;
+}
+.otherImages {
+  width: 400px;
+  height: 150px;
+}
+.otherImages img {
+  height: 100%;
+  width: 100%;
+}
+
 @media (max-width: 640px) {
   .allCard {
     top: 20%;
@@ -530,15 +557,25 @@ nav {
     max-height: 300px;
     transition: all 0.3s ease;
   }
+  .otherImages {
+    width: 300px;
+    border-top: none;
+  }
 }
 @media (max-width: 500px) {
   .bikePhotoSingle .imageSingle {
     max-height: 200px;
     float: right;
   }
+  .otherImages {
+    width: 200px;
+    height: 100px;
+    border-top: none;
+  }
 }
 
 .descriptionSingle {
+  margin-top: 10px;
   padding: 30px;
   float: right;
   width: 55%;
@@ -546,6 +583,7 @@ nav {
 }
 .priceSingle {
   font-size: 40px;
+  margin-bottom: 50px;
 }
 .descriptionHeader {
   font-size: 25px;
