--- a/src/App.css
+++ b/src/App.css
@@ -495,6 +495,7 @@ body {
 .cardSignleImages {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 nav {
@@ -538,12 +539,16 @@ nav {
   cursor: pointer;
 }
 
+.clicked {
+  border: 2px solid rgb(0, 0, 0);
+}
+
 .imageSingle {
   display: flex;
 }
 .otherImages {
-  width: 400px;
-  height: 150px;
+  width: 464px;
+  height: 125px;
 }
 .otherImages img {
   height: 100%;
