--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,14 @@ body {
   -moz-box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
   box-shadow: inset 0px 0px 9px 2px rgba(150, 145, 145, 1);
 }
-
+.bike .image {
+  width: 380px;
+  height: 380px;
+}
+.logoebikeImage {
+  width: 200px;
+  height: 95px;
+}
 @media (max-width: 500px) {
   .product {
     max-width: 300px;
@@ -626,4 +633,9 @@ nav {
   width: 20%;
   padding: 10px;
   justify-content: center;
+}
+
+.navbarImage {
+  width: 170px;
+  height: 70px;
 }
