--- a/src/App.css
+++ b/src/App.css
@@ -656,18 +656,19 @@ nav {
 }
 .modalBackground {
   position: absolute;
-  background: rgb(231, 229, 229);
-  margin-top: auto;
-  height: 100%;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  background-color: rgba(231, 229, 229, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modalContainer {
-  width: 500px;
-  height: 500px;
+  width: 600px;
+  height: 600px;
   border-radius: 12px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35);
@@ -724,4 +725,8 @@ nav {
 
 #cancelBtn {
   background-color: crimson;
+}
+.AdminTable {
+  display: flex;
+  margin: auto;
 }
