--- a/src/App.css
+++ b/src/App.css
@@ -655,7 +655,7 @@ nav {
   cursor: pointer;
 }
 .modalBackground {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
