--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,8 @@ body {
   font-weight: 500;
 }
 .infoBtn:hover {
-  background-color: rgb(19, 19, 19);
+  background-color: #3d3d3d;
+  border: none;
   color: white;
   cursor: pointer;
 }
@@ -213,7 +214,7 @@ body {
 }
 
 .addToCartBtn:hover {
-  background-color: rgb(19, 19, 19);
+  background-color: #3d3d3d;
   color: white;
   cursor: pointer;
 }
