--- a/src/App.css
+++ b/src/App.css
@@ -733,3 +733,32 @@ nav {
   display: flex;
   margin: auto;
 }
+
+.CustomerTable {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+}
+
+.CustomerTitleHistory {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.CustomerHelloHistory {
+  margin-top: 10px;
+  margin-left: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.TotalRevenue {
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  margin: auto;
+}
