--- a/src/App.css
+++ b/src/App.css
@@ -749,8 +749,8 @@ nav {
   margin-bottom: 10px;
 }
 .CustomerHelloHistory {
-  margin-top: 10px;
-  margin-left: 30px;
+  margin-top: 5px;
+  margin-right: 30px;
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
@@ -774,5 +774,23 @@ nav {
 
 .OrderAddressInfo {
   background-color: cornflowerblue;
-  
+}
+
+.CustomerBackBtn {
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 6px;
+  background-color: rgb(191, 180, 29);
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+
+.CustomerLeft {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 15px;
+  margin-top: 15px;
 }
